--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="D:/UAB/4o/TQS/Practica/Projecte_TQS/lib/byte-buddy-1.15.10.jar"/>
+	<classpathentry kind="lib" path="D:/UAB/4o/TQS/Practica/Projecte_TQS/lib/byte-buddy-agent-1.15.10.jar"/>
+	<classpathentry kind="lib" path="D:/UAB/4o/TQS/Practica/Projecte_TQS/lib/mockito-core-5.10.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
